--- a/Discover-Bank-Phone/res/layout/amount_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/amount_list_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/forms_inner_padding" >
+    android:paddingLeft="@dimen/forms_inner_padding" 
+    android:paddingRight="@dimen/forms_inner_padding">
 
     <TextView
         android:id="@+id/top_label"
