US10749  added help text to check deposit Added text to remind user to use a contrasting background and center the check within the white box.  When capture is made, the help text disappears.

--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -71,4 +71,5 @@
 	</string>
 	
 	<string name="bank_deposit_need_help_number">1&#8211;866&#8211;245&#8211;7419</string>
+	<string name="bank_deposit_help_text">Use a contrasting background. Center within the white box</string>
 </resources>
