US10400:  Added the overlay and the business rules behind showing the tips for check deposit.

--- a/Discover-Bank-Phone/res/values/color.xml
+++ b/Discover-Bank-Phone/res/values/color.xml
@@ -42,5 +42,6 @@
 	<color name="blue_link">#0267b1</color>
 	
 	<color name="text_shadow">#7F000000</color>
+	<color name="bank_overlay_shadow">#BF000000</color>
 	
 </resources>
