--- a/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
+++ b/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
@@ -197,5 +197,14 @@
             android:paddingRight="30dp"
             android:text="@string/capture" />
     </RelativeLayout>
+    
+    <ImageView
+        android:id="@+id/capturetips"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:contentDescription="@string/empty"
+        android:background="@color/bank_overlay_shadow"
+        android:onClick="closeLayout"
+        android:visibility="gone"/>
 
 </RelativeLayout>
