--- a/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
+++ b/Discover-Bank-Phone/res/layout/check_deposit_capture.xml
@@ -204,6 +204,7 @@
         android:layout_height="fill_parent"
         android:contentDescription="@string/empty"
         android:background="@color/bank_overlay_shadow"
+        android:src="@drawable/deposit_check_coachmarks"
         android:onClick="closeLayout"
         android:visibility="gone"/>
 
